update label handling for gremlin graph, working property pattern